Add New Images and Fix Violations